--- a/index.html
+++ b/index.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
-<html >
-<head>      
-<title>EMI CALCULATOR
-</title>
+<html>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<title>EMI CALCULATOR</title>
 <link rel="stylesheet" href="style .css">
 </head>
+
 <body>
 <h2>EMI CALCULATOR</h2>
+<form>
+    <div class="form-group">
+        <label>LOAN AMOUNT:</label>
+        <input type="number" id="loanAmount" placeholder="Enter Amount" required>
+    </div>
+    <div class="form-group">
+        <label>INTEREST RATE (%):</label>
+        <input type="number" id="interestRate" placeholder="Enter Interest Rate" required>
+    </div>
+     <div class="form-group">
+        <label>Choose months/years:</label>
+        <select id="lone">
+        <option value="months">Months</option>
+        <option value="years">Years</option>
+        </select>
+    </div>
 
-    <form>
-        <div class="form-group">
-            <label>LOAN AMOUNT:</label>
-            <input type="number" id="loanAmount" placeholder="Enter Amount" required>
-        </div>
-        <div class="form-group">
-            <label>INTEREST RATE (%):</label>
-            <input type="number" id="interestRate" placeholder="Enter Interest Rate" required>
-        </div>
-        <div class="form-group">
-            <label>MONTHLY EMI AMOUNT:</label>
-            <input type="number" id="emiAmount" placeholder="Enter EMI Amount" required>
-        </div>
-        <div class="form-group">
-            <label>LOAN TENURE (YEARS):</label>
-            <input type="number" id="loanTenure" placeholder="Enter Loan Tenure" required>
-        </div>
-        <button type="button">CALCULATE EMI</button>
-        <div class="result">
-            <p>Monthly EMI: ₹ <span id="emi">0</span></p>
-            <p>Total Interest: ₹ <span id="interest">0</span></p>
-            <p>Total Payment: ₹ <span id="payment">0</span></p>
-        </div>
+    <div class="result">
+        <p>Monthly EMI: ₹ <span id="emi">0</span></p>
+        <p>Total Payment: ₹ <span id="payment">0</span></p>
+    </div>
 </form>
 
-
-
-
-    <script src="main.js"></script>
+<script src="main.js"></script>
 </body>
-
 </html>
