--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input type="number" id="interestRate" placeholder="Enter Interest Rate" required>
     </div>
      <div class="form-group">
-        <label>Choose months/years:</label>
+        <label>Choose OF THE months/years:</label>
         <select id="lone">
         <option value="months">Months</option>
         <option value="years">Years</option>
