--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EMI CALCULATOR</title>
-<link rel="stylesheet" href="style .css">
+<title>Simple EMI Calculator</title>
+<link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-<h2>EMI CALCULATOR</h2>
-<form>
-    <div class="form-group">
-        <label>LOAN AMOUNT:</label>
-        <input type="number" id="loanAmount" placeholder="Enter Amount" required>
-    </div>
-    <div class="form-group">
-        <label>INTEREST RATE (%):</label>
-        <input type="number" id="interestRate" placeholder="Enter Interest Rate" required>
-    </div>
-     <div class="form-group">
-        <label>Choose OF THE months/years:</label>
-        <select id="lone">
-        <option value="months">Months</option>
-        <option value="years">Years</option>
-        </select>
-    </div>
+<h2>Simple EMI Calculator</h2>
 
-    <div class="result">
-        <p>Monthly EMI: ₹ <span id="emi">0</span></p>
-        <p>Total Payment: ₹ <span id="payment">0</span></p>
-    </div>
-</form>
+<div class="box">
+    <label>EMI Amount (Loan EMI):</label>
+    <input type="number" id="emiAmount" placeholder="Enter EMI Amount">
 
-<script src="main.js"></script>
-</body>
+    <label>Interest % :</label>
+    <input type="number" id="interest" placeholder="Enter Interest %">
+
+    <label>Enter Duration Number:</label>
+    <input type="number" id="duration" placeholder="Enter Months or Years">
+
+    <label>Select Type:</label>
+    <select id="type">
+        <option value="month">Month</option>
+        <option value="year">Year</option>
+    </select>
+
+    <button onclick="calculate()">Calculate</button>
+
+    <h3>OUTPUT</h3>
+    <p id="monthlyEmi"></p>
+    <p id="totalEmi"></p>
+    <p id="totalInterest"></p>
+</div>
+
+<script src="main.js"> </script>
+</body> 
 </html>
