--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h3>OUTPUT</h3>
     <p id="monthlyEmi"></p>
     <p id="totalEmi"></p>
-    <p id="totalInterest"></p>
+    <p id="total duration Interest"></p>
 </div>
 
 <script src="main.js"> </script>
